# Playlist-Master

./: .gitignore  README.md  module.schema.json  pyproject.toml
example/: config.toml
playlist_master/: cli.py  converter.py  downloader.py
